# tdprepview-mcp

./: .env.example  README.md  main.py  pyproject.toml  pytest.ini  server.py  utils.py
helpers/: __init__.py  autoprep.py  cache.py  modeldeployment.py  modeltrain.py  sklearn_data.py
tests/: conftest.py
tests/integration/: test_create_ml_autoprep_pipeline.py  test_deploy_and_predict.py  test_deploy_pipeline_to_database.py  test_get_dummy_data_upload.py  test_train_random_forest_model_tool.py
